--- a/debian/control
+++ b/debian/control
@@ -8,8 +8,10 @@ Build-Depends: cmake,
                debhelper (>= 9),
                libdbus-1-dev,
                libglib2.0-dev,
+               libkf5wayland-dev,
                libmtdev-dev,
                libudev-dev,
+               libwayland-dev,
                libxcb-composite0-dev,
                libxcb-damage0-dev,
                libxcb-xfixes0-dev,
